accessibility and contrast errors fixed

--- a/styles/small.css
+++ b/styles/small.css
@@ -56,7 +56,7 @@ footer{
 }
 
 .lastModif {
-    color: yellow;
+    color: black;
     margin-top: -10px;
     font-size: 0.8rem;
 }
